# Sukoon

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  conversations.db  conversations_20241107_232836.csv  disclaimer.html  docker-compose.yml  funding.json  langgraph.json  prompts.yaml  pyproject.toml  requirements.txt  s_api.py  sukoon.py  sukoon_api.py  sukoon_convo.py  sukoon_m.py
.github/workflows/: ci-cd.yml
.well-known/: funding-manifest-urls
KosaksiPasapugazhExperiments/: Classification.ipynb  Implementation of Confidence score.ipynb  NLPKnowHow.ipynb  PII.py  SentimentPredictor.ipynb
Sukoon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
conversation_backups/: backup_20241107_232836.json
convo_persona/: sukoon_convo.py
convo_persona/personas/: aisha.txt  rohan.txt  sanket.txt
frontend-vite/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend-vite/nginx/: nginx.conf
frontend-vite/src/: App.jsx  index.css
frontend-vite/src/components/: conversation.jsx  feedback-overlay.jsx  (+3 more)
legacy_code/: regression_test.py  temp.py
personas/: mansavi.txt  rohan.txt
sukoon-frontend/: Dockerfile  package-lock.json  package.json
sukoon-frontend/public/: index.html
sukoon-frontend/src/: App.css  App.js  index.css  index.html
tests/: Agent Testing.xlsx  regression_test.py  sukoon.py  test_api.py  test_sukoon.py
tests/regression_results/: regression_results_20241104_030505.json
tests/test_baselines/: prompts.json
tests/test_reports/: report.html
whatapp_chatbot/start/: assistants_quickstart.py
(+7 files in other folders)
